Fixed the major spacing issues near the top

--- a/Project 1/cssbootcamp.css
+++ b/Project 1/cssbootcamp.css
@@ -112,6 +112,7 @@ body{
 
 .sliderBanner{
 	width: 100%;
+	display: block;
 }
 
 .slidersImage{
@@ -135,10 +136,10 @@ body{
 	visibility: hidden;
 	height: 80px;
 	width: 30px;
-	position: relative;
+	position: absolute;
 	float: right;
-	right: 20px;
-	bottom: 300px;
+	right: 120px;
+	bottom: 250px;
 	z-index: 1;
 }
 
@@ -148,9 +149,9 @@ body{
 	visibility: hidden;
 	height: 80px;
 	width: 30px;
-	position: relative;
-	left: 20px;
-	bottom: 300px;
+	position: absolute;
+	left: 120px;
+	bottom: 250px;
 	z-index: 1;
 }
 
@@ -189,6 +190,7 @@ body{
 .moreFunctionIndividual{
 	background-color: #f4f4f4;
 	margin-bottom: 30px;
+	height: 235px;
 }
 
 .moreFunctionImage{
@@ -199,6 +201,7 @@ body{
 
 .mfunctionsImage{
 	width: 100%;
+	height: 100%;
 }
 
 .moreFunctionsText{
@@ -384,6 +387,9 @@ body{
 
 #passportDescription{
 	line-height: 1.8em;
+	font-size: 12pt;
+	font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
+	
 }
 
 #passportDescription a{
